Pull request #1112: AG-10189 fix mobile
Merge in EXTENSIONS/browser-extension from fix/AG-10189 to master

Squashed commit of the following:

commit 4b47b9ab94a0701d7b9bf0977d3d39abebf2b7c5
Author: Anton <a.kaprielov@adguard.com>
Date:   Wed Oct 27 13:52:37 2021 +0300

    fix update button

commit 30287ab4f437dd8f259cb0f91eae70cb6ea88dca
Author: Anton <a.kaprielov@adguard.com>
Date:   Wed Oct 27 12:47:13 2021 +0300

    fix background

commit 40e71cf95471bfd84220fdc717cd87afab3b60aa
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Oct 26 16:39:32 2021 +0300

    remove console log

commit 6db1ba3a4423d34f13ad9387ae72331b968cf506
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Oct 26 16:26:29 2021 +0300

    fix mobile

--- a/Extension/assets/css/style.css
+++ b/Extension/assets/css/style.css
@@ -1,6 +1,5 @@
 /* Generated by less 2.5.1 */
 .wlimit { /* th & st */
-  width: 990px;
   padding: 0 15px;
   margin: 0 auto;
 }
