--- a/Extension/src/pages/options/components/Filters/FiltersUpdate/filters-update.pcss
+++ b/Extension/src/pages/options/components/Filters/FiltersUpdate/filters-update.pcss
@@ -17,7 +17,7 @@
         color: var(--gray700);
         display: flex;
         flex-direction: column;
-        margin: 0 0 8px 0;
+        margin: 0 5px 8px 0;
 
         @media (min-width: 640px) {
             margin: 0 8px 0 0;
@@ -30,15 +30,7 @@
     }
 
     &__btn {
-        color: var(--gray400);
-
-        @media (prefers-color-scheme: dark) {
-            color: var(--gray700);
-        }
-
-        &--loading {
-            animation: spin 2s linear infinite;
-        }
+        min-width: 200px;
     }
 }
 
@@ -59,16 +51,4 @@
 @keyframes spin {
     0% {transform: rotate(0)}
     100% {transform: rotate(360deg)}
-}
-
-.light-mode {
-    .filters-update__btn {
-        color: var(--gray400);
-    }
-}
-
-.dark-mode {
-    .filters-update__btn {
-        color: var(--gray700);
-    }
 }
