--- a/Extension/src/pages/options/components/Filters/filter.pcss
+++ b/Extension/src/pages/options/components/Filters/filter.pcss
@@ -87,10 +87,14 @@
     }
 
     &__empty {
-        padding-top: 120px;
+        padding-top: 40px;
         display: flex;
         align-items: center;
         justify-content: center;
+
+        @media (min-width: 640px) {
+            padding-top: 120px;
+        }
     }
 }
 
