--- a/Extension/src/pages/popup/components/Popup/popup.pcss
+++ b/Extension/src/pages/popup/components/Popup/popup.pcss
@@ -1,5 +1,4 @@
 .popup {
-    width: 320px;
     height: 100%;
     min-height: 600px;
     overflow: hidden;
